src/objects/TaskTemplate__c.object
<CustomObject>
    <description>Templates for Task contained into Jobs.</description>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the survey that will be filled in this task</description>
        <inlineHelpText>Associate a Survey to this task.</inlineHelpText>
        <label>Survey</label>
        <referenceTo>SurveyVersion__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions for the field officer.</description>
        <inlineHelpText>Insert instructions for the field officer.</inlineHelpText>
        <label>Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobTemplate__c</fullName>
        <description>Id of the job that contains this task</description>
        <inlineHelpText>Select the Job this task belongs to.</inlineHelpText>
        <label>Job</label>
        <referenceTo>JobTemplate__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Task_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <description>Describes mapping from hierarchy objects to. (Used for form task types.)</description>
        <inlineHelpText>Insert description from hierarchy.</inlineHelpText>
        <label>Mapping</label>
        <length>56000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>JSON id of the object in the hierarchy that will be shown. (data-view and list-view only.)</description>
        <inlineHelpText>This is the object Id of hierarchy.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position of this task inside its job (defines order)</description>
        <inlineHelpText>Order Position for tasks list.</inlineHelpText>
        <label>Position</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResourceId__c</fullName>
        <description>Resource Id of the TaroWork library</description>
        <inlineHelpText>This is the Id of the view Resource Task</inlineHelpText>
        <label>Resource id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of task (data-view, list-view, form)</description>
        <inlineHelpText>Select a Type of Task.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>data-view</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>list-view</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AvoidChangeTypeWhenUpdateTask</fullName>
        <active>true</active>
        <description>If type value has been set before this cannot change.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED( Type__c )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Once a Type is set previously this value cannot change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnlySetFormWhenTypeIsForm</fullName>
        <active>true</active>
        <description>Set Form field only when Task Type is form.</description>
        <errorConditionFormula>!ISBLANK(Form__c) &amp;&amp; !ISPICKVAL(Type__c, &apos;form&apos;)</errorConditionFormula>
        <errorDisplayField>Form__c</errorDisplayField>
        <errorMessage>Form cannot be assigned to non data collection tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SelectFormWhenTypeIsForm</fullName>
        <active>true</active>
        <description>Guarantee Survey is required when Type value is form.</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;form&apos;) &amp;&amp; ISBLANK(Form__c)</errorConditionFormula>
        <errorDisplayField>Form__c</errorDisplayField>
        <errorMessage>Form is required for data collection tasks.</errorMessage>
    </validationRules>
</CustomObject>